Fixed divs for courses and important dates being too big

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ li a{
 	border-radius: 7px;
 }
 #courses{
-	height: 800px;
+	height: 700px;
 	padding: 60px;
 }
 #todo{
@@ -67,7 +67,7 @@ li a{
 	padding: 60px;
 }
 #dates{
-	height: 600px;
+	height: 500px;
 	text-align: left;
 	padding: 60px;
 	
